--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server",
-    "react-dev": "webpack --mode development --config webpack.config.js -w"
+    "react-dev": "webpack --mode development --config webpack.config.js -w & live-server"
   },
   "repository": {
     "type": "git",
