--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon server",
     "react-dev": "webpack --mode development --config webpack.config.js -w & live-server"
   },
@@ -30,7 +30,11 @@
     "chai": "^4.3.4",
     "css-loader": "^5.2.6",
     "eslint": "^7.27.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "mocha": "^8.4.0",
     "nodemon": "^2.0.7",
     "style-loader": "^2.0.0",
