--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.0"
   }
 }
