--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-spring": "^9.2.3",
     "styled-components": "^5.3.0",
     "styled-icons": "^10.34.0"
   }
