--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "jest",
+    "test": "jest -c jest.config.js --watch",
     "start": "nodemon server",
     "react-dev": "webpack --config webpack.config.js -w"
   },
@@ -29,6 +29,7 @@
     "@babel/preset-react": "^7.13.13",
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
+    "babel-jest": "^27.0.2",
     "babel-loader": "^8.2.2",
     "chai": "^4.3.4",
     "css-loader": "^5.2.6",
@@ -40,6 +41,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "mocha": "^8.4.0",
     "nodemon": "^2.0.7",
+    "react-test-renderer": "^17.0.2",
     "style-loader": "^2.0.0",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0"
