--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "webpack-cli": "^4.7.0"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "moment": "^2.29.1",
