--- a/.gitignore
+++ b/.gitignore
@@ -19,4 +19,10 @@ client/dist/vendors-node_modules_react-icons_md_index_esm_js-node_modules_react-
 client/dist/vendors-node_modules_react-icons_md_index_esm_js.bundle.js
 client/dist/vendors-node_modules_react-spring_dist_react-spring_esm_js.bundle.js
 client/dist/vendors-node_modules_react-icons_fi_index_esm_js.bundle.js
+client/dist/client_src_components_product-questions_ProductQuestions_jsx-node_modules_moment_locale_sync_-9b2e37.bundle.js
+client/dist/client_src_components_reviews_reviewsIndex_jsx-node_modules_moment_locale_sync_recursive_.bundle.js
+client/dist/vendors-node_modules_babel_runtime_helpers_esm_toConsumableArray_js-node_modules_react-icons_-bf2927.bundle.js
+client/dist/vendors-node_modules_moment_locale_af_js-node_modules_moment_locale_ar-dz_js-node_modules_mom-248d90.bundle.js
+client/dist/vendors-node_modules_react-icons_ai_index_esm_js-node_modules_react-icons_bs_index_esm_js.bundle.js
+client/dist/vendors-node_modules_react-icons_fa_index_esm_js.bundle.js
 package-lock.json
