--- a/.gitignore
+++ b/.gitignore
@@ -27,4 +27,5 @@ client/dist/vendors-node_modules_react-icons_ai_index_esm_js-node_modules_react-
 client/dist/client_src_components_reviews_reviewsIndex_jsx.bundle.js
 client/dist/vendors-node_modules_moment_locale_af_js-node_modules_moment_locale_ar-dz_js-node_modules_mom-bdec1a.bundle.js
 client/dist/vendors-node_modules_react-icons_fa_index_esm_js.bundle.js
+client/dist/vendors-node_modules_react-icons_ai_index_esm_js.bundle.js
 package-lock.json
