Refactor axios requests for Content Panel component

--- a/.gitignore
+++ b/.gitignore
@@ -26,4 +26,6 @@ client/dist/vendors-node_modules_moment_locale_af_js-node_modules_moment_locale_
 client/dist/vendors-node_modules_react-icons_ai_index_esm_js-node_modules_react-icons_bs_index_esm_js.bundle.js
 client/dist/vendors-node_modules_react-icons_fa_index_esm_js.bundle.js
 client/dist/vendors-node_modules_styled-icons_entypo_ChevronThinLeft_ChevronThinLeft_esm_js-node_modules_-95e330.bundle.js
+client/dist/vendors-node_modules_babel_runtime_helpers_esm_toConsumableArray_js-node_modules_react-icons_-c3048e.bundle.js
+client/dist/vendors-node_modules_moment_locale_af_js-node_modules_moment_locale_ar-dz_js-node_modules_mom-00fa3e.bundle.js
 package-lock.json
