Added favicon and completed navbar styling for now

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 config.js
 coverage
 node_modules
-client/dist
 package-lock.json
 
+!client/dist/
+
+client/dist/*
 !index.html
 !stylesheet.css
+!client/dist/favicon/
